# mini-pengin

./: .gitignore  README.md  pyproject.toml  setup.py
mini_pengin/: __init__.py  __main__.py  config.py  forge_runner.py  ingest_io.py  route_scangate.py  schemas.py
mini_pengin/extractors/: deepseek_extractor.py  ink_extractor.py
mini_pengin/postprocess/: boiler_skim.py  marklist_normalizer.py  page_tag_wiper.py  paraweld.py  token_meter.py  tongue_tag.py
mini_pengin/tables/: camelot_tables.py  docling_tables.py  ocr_md_tables.py  tables_utils.py
mini_pengin/utils/: pdf_probe.py
scripts/: generate_synthetic.py
